# jakal-control

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: sample_jobs.json
examples/prompts/: maintenance-plan.md
jakal_control/: __init__.py  __main__.py  config.py  database.py  enums.py  exceptions.py  job_runner.py  main.py  models.py  retry.py  schedules.py  schemas.py  state_machine.py  utils.py
jakal_control/adapters/: jakal_flow.py
jakal_control/services/: control.py  coordinator.py
jakal_control/web/: app.js  index.html  styles.css
tests/: conftest.py  test_control_service.py  test_coordinator.py  test_schedules.py  test_state_machine.py
