[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-control"
version = "0.1.0"
description = "Local-first supervisor and scheduler for Jakal Flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "psutil>=6.0.0,<7.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
jakal-control = "jakal_control.main:run"

[tool.setuptools.packages.find]
include = ["jakal_control*"]

[tool.setuptools.package-data]
jakal_control = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

